--- a/src/Chatter.UI/index.html
+++ b/src/Chatter.UI/index.html
@@ -1,11 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.ngrok-free.dev wss://*.ngrok-free.dev; img-src 'self' data: https://*.ngrok-free.dev;">
-  <title>Chatter</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" 
+          content="default-src 'self'; 
+                   connect-src 'self' http://localhost:5157 ws://localhost:5157 https://*.ngrok-free.dev wss://*.ngrok-free.dev; 
+                   script-src 'self' 'unsafe-inline' 'unsafe-eval'; 
+                   style-src 'self' 'unsafe-inline'; 
+                   img-src 'self' data: http://localhost:5157 https://*.ngrok-free.dev;">
+    <title>Chatter</title>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
